--- a/RECEITA.html
+++ b/RECEITA.html
@@ -36,5 +36,19 @@
             <li> FINALIZAÇÃO </li>
         </ol>
     <p> serve muita gente!! </p>
+        <hr>
+    <ul>
+        <a href="index.html"> <li style="font-style: italic;"> Inicio </li> </a> 
+        <a href="listaordenada.html"> <li style="font-style: italic;"> lista Ordenada </li> </a> 
+         <a href="listanaoordenada.html"> <li style="font-style: italic;"> Lista Não Ordenada </li> </a>
+        <a href="Aula19.html"> <li style="font-style: italic;"> Aula 19 </li> </a> 
+         <a href="Ola mundo.html"> <li style="font-style: italic;"> Ola Mundo </li> </a> 
+         <a href="RECEITA.html"> <li style="font-style: italic;"> Receita de Cuscuz </li> </a> 
+     </ul>
+     <hr>
+        <ul>
+            <li> <a href="http://www.google.com" target="_blank">ACESSAR GOOGLE AQUI </li> </a> 
+        </ul>
+
 </body>
 </html>
