--- a/index.html
+++ b/index.html
@@ -1,76 +1,22 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-	<head>
- 	    <meta charset="8">
-	    <title> OLA MUNDO </title>
-	    <img src="../imagem/download.png" alt="logo do senac">
-	</head>
-	<body>
-	     <h1> TITULO </h1>
-             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-	     Proin placerat ac diam non pretium. Nullam placerat vel neque 
-	     sit amet rutrum. Etiam rhoncus mattis tortor. <br> at dictum lectus tincidunt ut. 
-             Curabitur nec venenatis mi. Suspendisse et risus eget libero luctus hendreritLorem ipsum dolor sit amet, consectetur adipiscing elit.
-             Proin placerat ac diam non pretium. Nullam placerat vel neque sit amet rutrum <br> 
-             Etiam rhoncus mattis tortor, at dictum lectus tincidunt ut. Curabitur nec venenatis mi. 
-             Suspendisse et risus eget libero luctus hendrerit. Pellentesque neque nisi, aliquet ac</p>
-	 <hr>
-             <h2> TITULO </h2>
- 	     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-             Proin placerat ac diam non pretium. Nullam placerat vel neque sit amet rutrum. 
-             Etiam rhoncus mattis tortor, at dictum lectus tincidunt ut. <br> 
-             Curabitur nec venenatis mi. 
-             Suspendisse et risus eget libero luctus hendrerit. Pellentesque <br> 
-             neque nisi, aliquet ac Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-             Proin placerat ac diam non pretium. Nullam placerat vel neque sit amet rutrum. 
-             Etiam rhoncus mattis tortor, at dictum lectus tincidunt ut. Curabitur nec venenatis mi. 
-             Suspendisse et risus eget libero luctus hendrerit. Pellentesque neque nisi, aliquet ac </p>
- 	<hr>	
-             <h3> TITULO </h3>
-             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-             Proin placerat ac diam non pretium. Nullam placerat vel neque sit amet rutrum. 
-             Etiam rhoncus mattis tortor, at dictum lectus tincidunt ut <br> 
-             Lorem ipsum dolor sit amet, consectetur <br>
-             adipiscing elit.
-             Proin placerat ac diam non pretium. Nullam placerat vel neque sit amet rutrum. 
-             Etiam rhoncus mattis tortor, at dictum lectus tincidunt ut. Curabitur nec venenatis mi. 
-             Suspendisse et risus eget libero luctus hendrerit. Pellentesque neque nisi, aliquet ac
-             Curabitur nec venenatis mi. 
-             Suspendisse et risus eget libero luctus hendrerit. Pellentesque neque nisi, aliquet ac</p>
-	<hr> 
-
-             <h4> TITULO </h4>
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-             Proin placerat ac diam non pretium. Nullam placerat vel neque sit amet rutrum. 
-             Etiam rhoncus mattis tortor, at dictum lectus tincidunt ut. <br> 
-             Curabitur nec venenatis mi. 
-             Suspendisse et risus eget libero luctus hendrerit. Pellentesque neque nisi, aliquet ac 
-             Lorem ipsum dolor <br> sit amet, consectetur adipiscing elit.
-             Proin placerat ac diam non pretium. Nullam placerat vel neque sit amet rutrum. 
-             Etiam rhoncus mattis tortor, at dictum lectus tincidunt ut. Curabitur nec venenatis mi. 
-             Suspendisse et risus eget libero luctus hendrerit. Pellentesque neque nisi, aliquet ac</p> 
-	<hr>
-             <h5> TITULO </h5>
-             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-             Proin placerat ac diam non pretium. Nullam placerat vel neque sit amet rutrum. 
-             Etiam rhoncus mattis tortor, at dictum lectus tincidunt ut. <br>
-	     Curabitur nec venenatis mi. 
-             Suspendisse et risus eget libero luctus hendrerit. Pellentesque neque nisi, aliquet ac Lorem ipsum dolor 
-             sit amet, consectetur adipiscing elit.
-             Proin placerat ac diam <br> 
-             non pretium. Nullam placerat vel neque sit amet rutrum. 
-             Etiam rhoncus mattis tortor, at dictum lectus tincidunt ut. Curabitur nec venenatis mi. 
-             Suspendisse et risus eget libero luctus hendrerit. Pellentesque neque nisi, aliquet ac</p>   
-	<hr>
-             <h6> TITULO <h/6>
-	     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-             Proin placerat ac diam non pretium. Nullam placerat vel neque sit amet rutrum. 
-             Etiam rhoncus mattis tortor, at dictum lectus tincidunt ut. <br>
-             Curabitur nec venenatis mi. 
-             Suspendisse et risus eget libero luctus hendrerit. Pellentesque neque nisi, aliquet ac Lorem ipsum dolor
-             sit amet, consectetur adipiscing elit.
-             Proin placerat ac diam non pretium. <br> Nullam placerat vel neque sit amet rutrum. 
-             Etiam rhoncus mattis tortor, at dictum lectus tincidunt ut. Curabitur nec venenatis mi. 
-             Suspendisse et risus eget libero luctus hendrerit. Pellentesque neque nisi, aliquet ac</p> 		             
-	</body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1 style=" font-style: italic;"> LISTA DE ABAS </h1>
+    <ul>
+       <a href="index.html"> <li style="font-style: italic;"> Inicio </li> </a> 
+       <a href="listaordenada.html"> <li style="font-style: italic;"> lista Ordenada </li> </a> 
+        <a href="listanaoordenada.html"> <li style="font-style: italic;"> Lista Não Ordenada </li> </a>
+       <a href="Aula19.html"> <li style="font-style: italic;"> Aula 19 </li> </a> 
+        <a href="Ola mundo.html"> <li style="font-style: italic;"> Ola Mundo </li> </a> 
+        <a href="RECEITA.html"> <li style="font-style: italic;"> Receita de Cuscuz </li> </a> 
+    </ul>
+    <hr>
+        <ul>
+            <li> <a href="http://www.google.com" target="_blank">ACESSAR GOOGLE AQUI </li> </a> 
+        </ul>
 </html>
