--- a/listaordenada.html
+++ b/listaordenada.html
@@ -7,12 +7,25 @@
 </head>
 <body>
     <h1 style=" font-style: italic" >LISTA ORDENADA</h1>
+    <hr>
     <ol>
-        <li style=" font-style: italic">Crie uma conta no github</li>
+        </a><li style=" font-style: italic">Crie uma conta no github</li>
         <li style=" font-style: italic">Mude a imagem de perfil</li>
         <li style=" font-style: italic">Poste o link no teams</li>
         <li style=" font-style: italic">Siga os colegas</li>
         <li style=" font-style: italic">Crie um repositorio</li>
     </ol>
+    <hr>
+    <a href="index.html"> <li style="font-style: italic;"> Inicio </li> </a> 
+        <a href="listaordenada.html"> <li style="font-style: italic;"> lista Ordenada </li> </a> 
+         <a href="listanaoordenada.html"> <li style="font-style: italic;"> Lista Não Ordenada </li> </a>
+        <a href="Aula19.html"> <li style="font-style: italic;"> Aula 19 </li> </a> 
+         <a href="Ola mundo.html"> <li style="font-style: italic;"> Ola Mundo </li> </a> 
+         <a href="RECEITA.html"> <li style="font-style: italic;"> Receita de Cuscuz </li> </a> 
+         <hr>
+        <ul>
+            <li> <a href="http://www.google.com" target="_blank">ACESSAR GOOGLE AQUI </li> </a> 
+        </ul>
+
 </body>
 </html>
