--- a/pet_shop/banho-e-tosa.html
+++ b/pet_shop/banho-e-tosa.html
@@ -3,15 +3,49 @@
 <head>
 <meta charset="utf-8">
 <title>Meu amigo cão</title>
-<script src="interacao/html5shiv.min.js"></script>
 <link href="estilos/principal.css" rel="stylesheet" type="text/css">
-
 </head>
 
 <body id="banhoEtosa">
-<a href="index.html">Home</a>
-<main>
 
+	<header>
+
+		<h1>Meu amigo cão - Petshop</h1>
+		
+			<div id="anuncio"> 
+				<img src="multimidia/anuncio-cantinho-feliz-h.jpg" alt="anúncio -
+				cantinho feliz, hotel para cachorro">
+			</div>
+		
+			<section>
+				<p><a href="boletim.html"> Assine o boletim mensal</a></p>
+		
+				<p>nos acompanhe:</p>
+				
+				<figure>
+					<a href="#"><img src="multimidia/ms-facebook.gif" alt="facebook"></a>
+					<a href="#"><img src="multimidia/ms-twitter.gif" alt="twitter"></a>
+					<a href="#"><img src="multimidia/ms-youtube.gif" alt="youtube"></a>
+					<a href="#"><img src="multimidia/ms-pinterest.gif" alt="pinterest"></a>
+					<a href="#"><img src="multimidia/ms-gmais.gif" alt="google"></a>
+				</figure>
+				</section>
+		</header>
+		
+		<nav>
+		
+		<ul>
+		<li><a href="index.html">Home</a></li>
+		<li><a href="quem-somos.html">Quem somos</a></li>
+		<li><a href="produtos.html">Produtos</a></li>
+		<li><a href="banho-e-tosa.html">Banho e Tosa</a></li>
+		<li><a href="curiosidades.html">Curiosidades</a></li>
+		</ul>
+		
+		</nav>
+
+
+<main>
 <h1> Agendamento para banho e tosa </h1>
 <h2> Faça o seu agendamento com pelo menos 48 horas de antecedência</h2>
 
@@ -37,16 +71,9 @@
 <p><label for="nome_animal">Nome:</label> <input type="text" name="nome_animal" id="nome_animal"  size = "25" maxlength="40" placeholder="Digite o nome do animal"/></p>
 
 <p> Porte do cão:
-
-<input type="radio" name="porte_animal" id="animal_pequeno" value="animal_pequeno" checked> 
-<label for="animal_pequeno" class="labelSimples"> pequeno </label>
-
-<input type="radio" name="porte_animal" id="animal_medio" value="animal_medio" >
-<label for="animal_medio" class="labelSimples"> medio </label>
-
-<input type="radio" name="porte_animal" id="animal_grande" value="animal_grande"> 
-<label for="animal_grande" class="labelSimples"> grande </label>
-
+<input type="radio" name="porte_animal" id="animal_pequeno" value="animal_pequeno" checked> <label for="animal_pequeno" class="labelSimples"> pequeno </label>
+<input type="radio" name="porte_animal" id="animal_medio" value="animal_medio" checked> <label for="animal_medio" class="labelSimples"> médio </label>
+<input type="radio" name="porte_animal" id="animal_grande" value="animal_grande" checked> <label for="animal_grande" class="labelSimples"> grande </label>
 </p>
 
 <p>
@@ -72,21 +99,20 @@ Tipo de tosa:
 
 <p>Indique os dias da semana de sua preferência:<br>
 
-<input type="checkbox" name="semana" value="idterca"/>
-<label for="idterca" class="labelSimples"> Terça-feira </label> 
+<input type="checkbox" name="semana" value="idterca"/> 
+<label for="idterca" class="labelSimples">Terça-feira </label>
 
-<input type="checkbox" name="semana" value="idquarta"/>
+<input type="checkbox" name="semana" value="idquarta"/> 
 <label for="idquarta" class="labelSimples"> Quarta-feira </label>
 
-<input type="checkbox" name="semana" value="idquinta"/>
-<label for="idquinta" class="labelSimples"> Quinta-feira </label>
+<input type="checkbox" name="semana" value="idquinta"/> 
+<lanbel for="idquinta" class="labelSimples"> Quinta-feira </lanbel>
 
-<input type="checkbox" name="semana" value="idsexta"/>
+<input type="checkbox" name="semana" value="idsexta"/> 
 <label for="idsexta" class="labelSimples"> Sexta-feira </label>
 
-<input type="checkbox" name="semana" value="idsabado"/>
-<label for="idsabado" class="labelSimples"> Sábado-feira </label>
-
+<input type="checkbox" name="semana" value="idsabado"/> 
+<label for="idsabado" class="labelSimples">Sábado-feira </label>
 </p>
 
 <p>Primeira opção de horário:
@@ -103,7 +129,7 @@ Tipo de tosa:
 </main>
 
 <footer>
-<p>Atendimento: atendimento@meuamigocaopetshop.com • (0XX) 99999-9999 / (0XX) 88888-8888</p>
+    <p>Atendimento: atendimento@meuamigocaopetshop.com (0XX) 99999-9999 / (0XX) 88888-8888</p>
 </footer>
 
 </body>
