--- a/pet_shop/quem-somos.html
+++ b/pet_shop/quem-somos.html
@@ -9,19 +9,52 @@
 
 	<title>Quem somos - Meu amigo cão</title>
 
-	<link href="estilos/principal.css" rel="stylesheet" type="text/css">
-	<script src="interacao/html5shiv.min.js"></script>
+<link href="estilos/principal.css" rel="stylesheet" type="text/css">
 
+<script src="interacao/html5shiv.min.js"> </script>
 
 </head>
 
 
 <body id="quemSomos"> 
+	<header>
 
+		<h1>Meu amigo cão - Petshop</h1>
+		
+			<div id="anuncio"> 
+				<img src="multimidia/anuncio-cantinho-feliz-h.jpg" alt="anúncio -
+				cantinho feliz, hotel para cachorro">
+			</div>
+		
+			<section>
+				<p><a href="boletim.html"> Assine o boletim mensal</a></p>
+		
+				<p>nos acompanhe:</p>
+				
+				<figure>
+					<a href="#"><img src="multimidia/ms-facebook.gif" alt="facebook"></a>
+					<a href="#"><img src="multimidia/ms-twitter.gif" alt="twitter"></a>
+					<a href="#"><img src="multimidia/ms-youtube.gif" alt="youtube"></a>
+					<a href="#"><img src="multimidia/ms-pinterest.gif" alt="pinterest"></a>
+					<a href="#"><img src="multimidia/ms-gmais.gif" alt="google"></a>
+				</figure>
+				</section>
+		</header>
+		
+		<nav>
+		
+		<ul>
+		<li><a href="index.html">Home</a></li>
+		<li><a href="quem-somos.html">Quem somos</a></li>
+		<li><a href="produtos.html">Produtos</a></li>
+		<li><a href="banho-e-tosa.html">Banho e Tosa</a></li>
+		<li><a href="curiosidades.html">Curiosidades</a></li>
+		</ul>
+		
+		</nav>
 
-
-<p><a href="index.html">Home</a></p>
 <main>
+
 <h1> <img src="multimidia/meuamigocao.jpg" alt="Meu amigo cão - Petshop"> Quem somos</h1>
 <p>O que nós acreditamos <br> 
 Na <strong>Meu amigo cão</strong>, o nosso sucesso como uma organização é conduzida pelo cuidado 
@@ -56,17 +89,13 @@ Pellentesque porttitor mi venenatis, pharetra tellus vitae, egestas leo. Nullam 
 
 
 
-</main>
-
-
-<footer>
-<p>Atendimento: atendimento@meuamigocaopetshop.com • (0XX) 99999-9999 / (0XX) 88888-8888</p>
-</footer>
-
-
 </body>
-
-</html>
-
-
+<hr>
+<h2> Local </h2>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d922.0881357063664!2d-46.82088258487707!3d-22.41575295655189!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c901e38d9fdaa5%3A0xc45fe882f8adaf5!2sR.%20Bianor%20Cescon%2C%2049%20-%20Jardim%20Galego%2C%20Itapira%20-%20SP%2C%2013971-261!5e0!3m2!1spt-BR!2sbr!4v1706142116313!5m2!1spt-BR!2sbr" width="1000" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</main>
+<footer>
+	<p>Atendimento: atendimento@meuamigocaopetshop.com (0XX) 99999-9999
+	/ (0XX) 8888-8888</p>
+</footer>
 </html>
